# local-turboquant

./: .gitignore  README.md  RESEARCH.md  models.md  pyproject.toml
examples/: colab_vram_test.ipynb  local_smoke.py  modal_smoke.py
research/: README.md  __init__.py  config.py  modal_app.py
research/benchmarks/: __init__.py
research/modeling/: __init__.py  qwq.py
research/quantization/: __init__.py
research/runtime/: __init__.py
src/turboquant/: __init__.py  api.py  cli.py  telemetry.py
src/turboquant/adapters/: __init__.py  transformers.py
src/turboquant/quantization/: __init__.py
src/turboquant/runtime/: __init__.py  attention.py  generation.py  packed_qmse_cache.py  triton_kernels.py
