[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "KV cache compression for HuggingFace Transformers (TurboQuant, ICLR 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "transformers>=4.40",
  "accelerate>=0.30",
  "huggingface_hub>=0.23",
  "safetensors>=0.4",
  "scipy>=1.13",
  "numpy>=1.26",
]

[project.scripts]
turboquant = "turboquant.cli:main"

[project.optional-dependencies]
triton = ["triton>=3.2.0"]
benchmarks = [
  "datasets>=2.18",
  "jsonlines>=4.0",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "tqdm>=4.66",
]
modal = ["modal>=1.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
